--- a/interface/menu.twig
+++ b/interface/menu.twig
@@ -4,31 +4,42 @@
             <div class="col-4 border">
                 <h2 class="text-center pt-2">Proyecto bmpPic</h2>
                 <hr>
-                <input type="file" name="" value=""><input type="submit" value="Subir">
+                <form class="" action="{{ base_url }}index.php" method="post" enctype="multipart/form-data">
+                    <input type="file" name="file"><input type="submit" value="Subir" name="submit">
+                </form>
                 <hr>
                 <div class="list-group pb-5">
                     <h5 class="list-group-item">Filtros disponibles</h5>
-                    <a href="{{ base_url }}index.php?opt=1{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 1 %}active{% endif %}">Separar Color</a>
-                    <a href="{{ base_url }}index.php?opt=2" class="list-group-item {% if opt == 2 %}active{% endif %}">Filtro 2</a>
-                    <a href="{{ base_url }}index.php?opt=3" class="list-group-item {% if opt == 3 %}active{% endif %}">Filtro 3</a>
-                    <a href="{{ base_url }}index.php?opt=4" class="list-group-item {% if opt == 4 %}active{% endif %}">Filtro 4</a>
-                    <a href="{{ base_url }}index.php?opt=5" class="list-group-item {% if opt == 5 %}active{% endif %}">Filtro 5</a>
-                    <a href="{{ base_url }}index.php?opt=6" class="list-group-item {% if opt == 6 %}active{% endif %}">Filtro 6</a>
-                    <a href="{{ base_url }}index.php?opt=7" class="list-group-item {% if opt == 7 %}active{% endif %}">Filtro 7</a>
+                    <a href="{{ base_url }}index.php?opt=1{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 1 %}active{% endif %}">{{ opt_name.0 }}</a>
+                    <a href="{{ base_url }}index.php?opt=2{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 2 %}active{% endif %}">{{ opt_name[1] }}</a>
+                    <a href="{{ base_url }}index.php?opt=3{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 3 %}active{% endif %}">{{ opt_name[2] }}</a>
+                    <a href="{{ base_url }}index.php?opt=4{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 4 %}active{% endif %}">{{ opt_name[3] }}</a>
+                    <a href="{{ base_url }}index.php?opt=5{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 5 %}active{% endif %}">{{ opt_name[4] }}</a>
+                    <a href="{{ base_url }}index.php?opt=6{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 6 %}active{% endif %}">{{ opt_name[5] }}</a>
+                    <a href="{{ base_url }}index.php?opt=7{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 7 %}active{% endif %}">{{ opt_name[6] }}</a>
+
+                    <a href="{{ base_url }}index.php?clear=1" class="btn btn-primary">Limpiar</a>
                 </div>
             </div>
 
             <div class="col-8 border">
                 <div class="row">
                     <div class="col-6">
-                        <h3>Original</h3>
-                        <img src="{{ image_name }}" alt="">
+                        <h3>Original: {{ image }}</h3>
+                        <img src="{{ image_name }}" alt="" class="img-fluid">
                     </div>
                     <div class="col-6">
                         <h3>Filtro: {{ opt_name }}</h3>
-                        <img src="imagen.bmp" alt="">
+                        <img src="{{ image_processed }}" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="row border">
+            <div class="container">
+                <small>{{ output }}</small>
+            </div>
+        </div>
+
     </div>
