--- a/interface/menu.twig
+++ b/interface/menu.twig
@@ -10,13 +10,12 @@
                 <hr>
                 <div class="list-group pb-5">
                     <h5 class="list-group-item">Filtros disponibles</h5>
-                    <a href="{{ base_url }}index.php?opt=1{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 1 %}active{% endif %}">{{ opt_name.0 }}</a>
-                    <a href="{{ base_url }}index.php?opt=2{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 2 %}active{% endif %}">{{ opt_name[1] }}</a>
-                    <a href="{{ base_url }}index.php?opt=3{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 3 %}active{% endif %}">{{ opt_name[2] }}</a>
-                    <a href="{{ base_url }}index.php?opt=4{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 4 %}active{% endif %}">{{ opt_name[3] }}</a>
-                    <a href="{{ base_url }}index.php?opt=5{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 5 %}active{% endif %}">{{ opt_name[4] }}</a>
-                    <a href="{{ base_url }}index.php?opt=6{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 6 %}active{% endif %}">{{ opt_name[5] }}</a>
-                    <a href="{{ base_url }}index.php?opt=7{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 7 %}active{% endif %}">{{ opt_name[6] }}</a>
+                    <a href="{{ base_url }}index.php?opt=1{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 1 %}active{% endif %}">{{ opt_name_1 }}</a>
+                    <a href="{{ base_url }}index.php?opt=2{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 2 %}active{% endif %}">{{ opt_name_2 }}</a>
+                    <a href="{{ base_url }}index.php?opt=3{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 3 %}active{% endif %}">{{ opt_name_3 }}</a>
+                    <a href="{{ base_url }}index.php?opt=4{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 4 %}active{% endif %}">{{ opt_name_4 }}</a>
+                    <a href="{{ base_url }}index.php?opt=5{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 5 %}active{% endif %}">{{ opt_name_5 }}</a>
+                    <a href="{{ base_url }}index.php?opt=6{% if image %}&image={{ image }}{% endif %}" class="list-group-item {% if opt == 6 %}active{% endif %}">{{ opt_name_6 }}</a>
 
                     <a href="{{ base_url }}index.php?clear=1" class="btn btn-primary">Limpiar</a>
                 </div>
@@ -30,7 +29,7 @@
                     </div>
                     <div class="col-6">
                         <h3>Filtro: {{ opt_name }}</h3>
-                        <img src="{{ image_processed }}" alt="" class="img-fluid">
+                        <a href="{{ image_processed }}" target="_blank"><img src="{{ image_processed }}" alt="" class="img-fluid"></a>
                     </div>
                 </div>
             </div>
